# poreflow

./: .travis.yml  ARCHER.md  CMakeLists.txt  LICENSE  README.md  tutorial.md
data/: Berea.conf  example_perm.tiff  example_perm_gray.tiff  hourglass.conf  hourglass.msh
data/images/: noise_removed_gray_image_01.tiff  noise_removed_gray_image_02.tiff  noise_removed_gray_image_03.tiff  noise_removed_gray_image_04.tiff  noise_removed_gray_image_05.tiff  noise_removed_gray_image_06.tiff  noise_removed_gray_image_07.tiff  noise_removed_gray_image_08.tiff  noise_removed_gray_image_09.tiff  noise_removed_gray_image_10.tiff  noise_removed_gray_image_11.tiff  noise_removed_gray_image_12.tiff  noise_removed_gray_image_13.tiff  noise_removed_gray_image_14.tiff  noise_removed_gray_image_15.tiff  noise_removed_gray_image_16.tiff  noise_removed_gray_image_17.tiff  noise_removed_gray_image_18.tiff  noise_removed_gray_image_19.tiff  noise_removed_gray_image_20.tiff  noise_removed_gray_image_21.tiff  noise_removed_gray_image_22.tiff  noise_removed_gray_image_23.tiff  noise_removed_gray_image_24.tiff  noise_removed_gray_image_25.tiff  noise_removed_gray_image_26.tiff  noise_removed_gray_image_27.tiff  noise_removed_gray_image_28.tiff  noise_removed_gray_image_29.tiff  noise_removed_gray_image_30.tiff  noise_removed_gray_image_31.tiff  noise_removed_gray_image_32.tiff  noise_removed_gray_image_33.tiff  noise_removed_gray_image_34.tiff  noise_removed_gray_image_35.tiff
docs/: Tarantula.txt
include/: CTImage.h  mesh_conversion.h
python/: stokes-dolfin-snes.py  stokes-dolfin.py
src/: CTImage.cpp  CTImage.h  Makefile  convert_microct.cpp  create_hourglass.cpp  mesh_2d_tiff.cpp  mesh_3d_tiff.cpp  mesh_conversion.cpp  mesh_microct.cpp  mesh_raw.cpp  tarantula2gmsh.cpp  vtk2gmsh.cpp  writers.cpp  writers.h
